# wasi_nn_backend

./: .gitignore  CMakeLists.txt  CONTEXT.md  Makefile  Makefile.dev  README.md  STRUCTURE.md  TODO.md
cmake/: Findcjson.cmake  Findllamacpp.cmake  build_llama_runtime.cmake  llama_server.cmake  wasi_nn.cmake  wasi_nn_clean.cmake
docs/: PARAMETER_REFERENCE.md  USER_GUIDE.md
examples/: simple_inference.c
include/: llama_runtime.h  llama_server.h  wasi_nn_llama.h  wasi_nn_types.h
src/: llama_runtime.cpp  llama_server.cpp  wasi_nn_llama.cpp  wasi_nn_llama.h  wasi_nn_llamacpp.c
src/server/: server.cpp  utils.hpp
test/: Makefile  main.c  test_basic.c  test_common.c  test_common.h  test_error.c  test_inference.c  test_llama_server.c  test_logging.c  test_model.c  test_session.c  test_stopping.c
